--- a/train_skin.ipynb
+++ b/train_skin.ipynb
@@ -741,7 +741,7 @@
     "        msk_pred, B, R = Net(img, with_additional=True)\n",
     "        loss          = criteria(msk_pred, msk) \n",
     "        loss_regions  = criteria_region(weak_ann[:,0], R[:,:-1,0])\n",
-    "        loss_boundary = criteria(msk_pred, msk)  \n",
+    "        loss_boundary = criteria_boundary(B, boundary)  \n",
     "        tloss    = (0.7*(loss)) + (0.1* loss_regions) + (0.2*loss_boundary)\n",
     "        optimizer.zero_grad()\n",
     "        tloss.backward()\n",
